[package]
name = "job-queue-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queue = { path = "../queue" }
strum = "0.24.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
axum = { version = "0.4.8", features = ["default", "headers"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
tower-http = { version = "0.2.3", features = ["trace"] }
headers = "0.3.7"
once_cell = "1.10.0"
uuid = { version = "0.8.2", features = ["serde"] }